# Evidencias_TC2038

./: CMakeLists.txt  Kmp.h  Lcs.h  README.md  a.out  longest_palindrome.cpp  longest_palindrome.h  longest_substring.cpp  main.cpp  sonar-project.properties  team.txt  transmission1.txt
.github/workflows/: ci.yml
Evidencia1/: team.txt
Evidencia2/: central.cpp  tsp.cpp
src/: FordFulkenson.h  Kruskal.h  LinearSearch.h  TSP.h  a.out  in.txt  libs.h  main.cpp
tests/: expected_output.txt  test_bfs.cpp  test_central.cpp  test_fordFulkenson.cpp  test_kruskal.cpp  test_main.cpp  test_tsp.cpp
